--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Moiz Abdullah</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
@@ -34,7 +34,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud" />
       <h1>I'm Moiz.</h1>
-      <h2>a programmer.</h2>
+      <h2>a Software Engineer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud" />
       <img src="images/mountain.png" alt="mountain" />
     </div>
@@ -43,20 +43,22 @@
       <div class="profile">
         <img class="my-pic" src="images/me.png" alt="profile picture">
         <h2>Hello.</h2>
-        <p class="intro">I am a third year Software Engineer. Currently in love with web development.</p>
+        <p class="intro">I am a Software Engineering Student at University of Calgary. I enjoy watching NBA, working out, and programing.</p>
       </div>
       <hr id="Projects">
       <div class="skills">
         <h2>My Projects.</h2>
         <div class="skill-row">
-          <img class="web-img" src="images/webdev.png" alt="Web Development">
-          <h3>Web Development</h3>
-          <p>I make websites with HTML, CSS, and Javascript.</p>
+          <img class="web-img" src="images/YYC.png" alt="Web Development">
+          <h3>YYC ADVENTURE</h3>
+          <p>A Calgary Themed application featuring interactive programs developed in Processing built in a 24-hour hackathon.</p>
+          <a href="https://github.com/haseebk/YYC-Adventure" target="_blank"><img src="images/github.png" alt="Github Link" width="5%"></a>
         </div>
         <div class="skill-row">
-          <img class="data-img" src="images/database.png" alt="DataBase">
-          <h3>DataBase</h3>
-          <p>I make backend Databases with MySQL/PHP and MongoDB/NodeJS.</p>
+          <img class="data-img" src="images/registration.png" alt="DataBase">
+          <h3>COURSE REGISTRATION SYSTEM</h3>
+          <p>A Course Registration system that allows students to register and manage courses. Built using client-server architectures, multi-threading, JDBC, SQL, and GUI.</p>
+          <a href="https://github.com/Moiz49/Student-Course-Registration-Application" target="_blank"><img src="images/github.png" alt="Github Link" width="5%"></a>
         </div>
       </div>
       <hr>
@@ -69,9 +71,9 @@
     </div>
     
     <div class="bottom-container" >
-      <a class="footer-link" href="https://www.linkedin.com/in/moiz-abdullah-10101/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/moiz69abw">Twitter</a>
-      <a class="footer-link" href="https://github.com/Moiz49">Github</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/moiz-abdullah-10101/" target="_blank">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/moiz69abw" target="_blank">Twitter</a>
+      <a class="footer-link" href="https://github.com/Moiz49" target="_blank">Github</a>
       <p class="copy-right">© 2020 Moiz Abdullah.</p>
     </div>
 
