--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             <img class="project-img" src="images/simon-game.png" alt="YYC ADVENTURE">
             <h3>Simon Game</h3>
             <p class="project-text">Popular game to test your memory. Biult using HTML, CSS, and JavaScript (jQuery).</p>
-            <a href="/simon-game/simon.html" target="_blank"><img class="project-link-img" src="images/link.png" alt="Link"></a>
+            <!-- <a href="/simon-game/simon.html" target="_blank"><img class="project-link-img" src="images/link.png" alt="Link"></a> -->
+            <a href="https://moiz49.github.io/Simon-Game/" target="_blank"><img class="project-link-img" src="images/link.png" alt="Link"></a>
             <a href="https://github.com/Moiz49/Simon-Game/tree/master" target="_blank"><img class="project-link-img" src="images/github.png" alt="Github Link"></a>
           </div>
 
@@ -113,7 +114,8 @@
             <img class="project-img" src="images/drum-set.png" alt="YYC ADVENTURE">
             <h3>Drum kit</h3>
             <p class="project-text">Virtual drum kit. Biult using HTML, CSS, and vanilla JavaScript.</p>
-            <a href="/drum-kit/drums.html" target="_blank"><img class="project-link-img" src="images/link.png" alt="Link"></a>
+            <!-- <a href="/drum-kit/drums.html" target="_blank"><img class="project-link-img" src="images/link.png" alt="Link"></a> -->
+            <a href="https://moiz49.github.io/Drum-Kit/" target="_blank"><img class="project-link-img" src="images/link.png" alt="Link"></a>
             <a href="https://github.com/Moiz49/Drum-Kit" target="_blank"><img class="project-link-img" src="images/github.png" alt="Github Link"></a>
           </div>
                     
